--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
       name="description"
       content="Watch Me Restart From ZERO And Land My First High-Ticket Client In 5 Days: Follow Along LIVE As I Strip Away My Brand, Connections, And Past Results… And Document Every Move I Make To Build An Online Income From Nothing"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.fontshare.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Space+Grotesk:wght@400;700&family=Syne:wght@700;800&display=swap"
+      href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
   </head>
