--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://framerusercontent.com/images/8AuHvxfMKdbDjdukhW19UoTnQ4.png" />
+    <link rel="icon" href="/images/optimized/favlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Brand Scaling Bootcamp - Brez Scales</title>
+    <title>The Brand Scaling Bootcamp - Ahmed Damouni | Free Meta Ads Cheat Sheet</title>
     <meta
       name="description"
       content="Watch Me Restart From ZERO And Land My First High-Ticket Client In 5 Days: Follow Along LIVE As I Strip Away My Brand, Connections, And Past Results… And Document Every Move I Make To Build An Online Income From Nothing"
